[package]
name = "ctrl"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@t-online.de>"]
edition = "2018"

[dependencies]
derivative = "*"
fuse_mt = "*"
fuseable = { path = "fuseable" }
fuseable_derive = { path = "fuseable_derive" }
i2c-linux = "*"
i2cdev = "*"
isomorphism = { version = "*", features = ["serde"] }
itertools = "*"
lazy_static = "*"
memmap = "*"
nom = "*"
num = "*"
parse_num = { path = "parse_num" }
serde = { version = "1.0.85", features = ["rc"] }
serde_derive = "1.0.85"
serde_yaml = "*"
structopt = "*"

[profile.release]
codegen-units = 16
lto = true
panic = 'abort'
